[package]
name = "nv_ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.7.2"
ring = "0.16.20"
rand = "0.8.5"
pem = { version = "1.0" }
rcgen = { version = "0.10.0", features = ["pem"] }
num-traits = { version = "0.2", default-features = false }
num-bigint-dig = { version = "0.8", default-features = false }
sha2 = "0.10.6"
base64 = "0.13.1"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
time = { version = "0.3.17", features = ["macros", "serde", "formatting", "parsing"] }


tokio = { version = "1.13.1", features = ["full"] }
actix-web = { version = "4", features = ["rustls"] }
actix-web-httpauth = "0.8.0"
rustls = "0.20"
rustls-pemfile = "1"
env_logger = "0.10"
log = "0.4"
futures = "0.3.25"

redis = { version = "0.22", features = ["tokio-comp"] }
obfstr = "0.4.1"
derive_more = "0.99.17"


[profile.dev.package.num-bigint-dig]
opt-level = 3


[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"